lab1/GrammarTree.output
语法

    0 $accept: Program $end

    1 Program: ClassDefs

    2 ClassDefs: ClassDef
    3          | ClassDefs ClassDef

    4 VariableDef: Variable LMSEMICOLON
    5            | Variable CommaIdentifiers LMSEMICOLON
    6            | error LMSEMICOLON

    7 CommaIdentifiers: LMCOMMA IDENTIFIER
    8                 | CommaIdentifiers LMCOMMA IDENTIFIER

    9 Variable: Type IDENTIFIER

   10 Type: TYPEINT
   11     | TYPEFLOAT
   12     | TYPEBOOL
   13     | TYPECHAR
   14     | KEYCLASS IDENTIFIER
   15     | Type OPLEFTBRACKET OPRIGHTBRACKET

   16 Variables: Variable
   17          | Variables LMCOMMA Variable

   18 Formals: %empty
   19        | Variables

   20 FunctionDef: Type IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

   21 ClassDef: KEYCLASS IDENTIFIER LMLEFTBRACE Fields LMRIGHTBRACE
   22         | KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER LMLEFTBRACE Fields LMRIGHTBRACE
   23         | error LMRIGHTBRACE

   24 Fields: %empty
   25       | Field Fields

   26 Field: VariableDef
   27      | FunctionDef

   28 StmtBlock: LMLEFTBRACE Stmts LMRIGHTBRACE
   29          | error LMRIGHTBRACE

   30 Stmts: %empty
   31      | Stmt Stmts

   32 Stmt: VariableDef
   33     | SimpleStmt LMSEMICOLON
   34     | IfStmt
   35     | WhileStmt
   36     | BreakStmt LMSEMICOLON
   37     | ReturnStmt LMSEMICOLON
   38     | StmtBlock

   39 SimpleStmt: %empty
   40           | LValue OPASSIGN Expr
   41           | LValue OPPLUS_ Expr
   42           | LValue OPMINUS_ Expr
   43           | LValue OPMULTIPLY_ Expr
   44           | LValue OPDIVIDE_ Expr
   45           | OPINCREASE IDENTIFIER
   46           | OPDECREASE IDENTIFIER
   47           | Call

   48 LValue: IDENTIFIER
   49       | Expr LMDOT IDENTIFIER
   50       | Expr OPLEFTBRACKET Expr OPRIGHTBRACKET

   51 Call: IDENTIFIER OPLEFTPRNT Actuals OPRIGHTPRNT
   52     | Expr LMDOT IDENTIFIER OPLEFTPRNT Actuals OPRIGHTPRNT

   53 Actuals: %empty
   54        | Exprs

   55 Exprs: Expr
   56      | Exprs LMCOMMA Expr

   57 WhileStmt: KEYWHILE OPLEFTPRNT BoolExpr OPRIGHTPRNT Stmt

   58 IfStmt: KEYIF OPLEFTPRNT BoolExpr OPRIGHTPRNT Stmt
   59       | KEYIF OPLEFTPRNT BoolExpr OPRIGHTPRNT Stmt KEYELSE Stmt

   60 ReturnStmt: KEYRETURN
   61           | KEYRETURN Expr

   62 BreakStmt: KEYBREAK

   63 BoolExpr: Expr

   64 Expr: Constant
   65     | LValue
   66     | Call
   67     | OPLEFTPRNT Expr OPRIGHTPRNT
   68     | Expr OPPLUS Expr
   69     | Expr OPMINUS Expr
   70     | Expr OPMULTIPLY Expr
   71     | Expr OPDIVIDE Expr
   72     | OPMINUS Expr
   73     | Expr OPLESS Expr
   74     | Expr OPLESSEQ Expr
   75     | Expr OPGREAT Expr
   76     | Expr OPGREATEQ Expr
   77     | Expr OPEQUAL Expr
   78     | Expr OPNOTEQUAL Expr
   79     | Expr OPAND Expr
   80     | Expr OPOR Expr
   81     | OPNOT Expr
   82     | KEYNEW IDENTIFIER OPLEFTPRNT OPRIGHTPRNT
   83     | KEYNEW Type OPLEFTBRACKET Expr OPRIGHTBRACKET
   84     | OPLEFTPRNT KEYCLASS IDENTIFIER OPRIGHTPRNT Expr

   85 Constant: CONSTANTINTD
   86         | CONSTANTINTH
   87         | CONSTANTFLOAT
   88         | CONSTANTFLOATSC
   89         | CONSTANTBOOL


Terminals, with rules where they appear

$end (0) 0
error (256) 6 23 29
LMSEMICOLON (258) 4 5 6 33 36 37
LMCOMMA (259) 7 8 17 56
LMDOT (260) 49 52
LMLEFTBRACE (261) 21 22 28
LMRIGHTBRACE (262) 21 22 23 28 29
OPLEFTPRNT (263) 20 51 52 57 58 59 67 82 84
OPRIGHTPRNT (264) 20 51 52 57 58 59 67 82 84
OPLEFTBRACKET (265) 15 50 83
OPRIGHTBRACKET (266) 15 50 83
OPPLUS (267) 68
OPMINUS (268) 69 72
OPMULTIPLY (269) 70
OPDIVIDE (270) 71
OPASSIGN (271) 40
OPPLUS_ (272) 41
OPMINUS_ (273) 42
OPMULTIPLY_ (274) 43
OPDIVIDE_ (275) 44
OPINCREASE (276) 45
OPDECREASE (277) 46
OPAND (278) 79
OPOR (279) 80
OPNOT (280) 81
OPGREAT (281) 75
OPLESS (282) 73
OPGREATEQ (283) 76
OPLESSEQ (284) 74
OPEQUAL (285) 77
OPNOTEQUAL (286) 78
TYPECHAR (287) 13
TYPEINT (288) 10
TYPEFLOAT (289) 11
TYPEBOOL (290) 12
KEYCLASS (291) 14 21 22 84
KEYNEW (292) 82 83
KEYEXTENDS (293) 22
KEYIF (294) 58 59
KEYELSE (295) 59
KEYWHILE (296) 57
KEYBREAK (297) 62
KEYRETURN (298) 60 61
CONSTANTINTD (299) 85
CONSTANTINTH (300) 86
CONSTANTFLOAT (301) 87
CONSTANTFLOATSC (302) 88
CONSTANTBOOL (303) 89
IDENTIFIER (304) 7 8 9 14 20 21 22 45 46 48 49 51 52 82 84
LOWER_THAN_ELSE (305)


Nonterminals, with rules where they appear

$accept (51)
    左： 0
Program (52)
    左： 1, 右： 0
ClassDefs (53)
    左： 2 3, 右： 1 3
VariableDef (54)
    左： 4 5 6, 右： 26 32
CommaIdentifiers (55)
    左： 7 8, 右： 5 8
Variable (56)
    左： 9, 右： 4 5 16 17
Type (57)
    左： 10 11 12 13 14 15, 右： 9 15 20 83
Variables (58)
    左： 16 17, 右： 17 19
Formals (59)
    左： 18 19, 右： 20
FunctionDef (60)
    左： 20, 右： 27
ClassDef (61)
    左： 21 22 23, 右： 2 3
Fields (62)
    左： 24 25, 右： 21 22 25
Field (63)
    左： 26 27, 右： 25
StmtBlock (64)
    左： 28 29, 右： 20 38
Stmts (65)
    左： 30 31, 右： 28 31
Stmt (66)
    左： 32 33 34 35 36 37 38, 右： 31 57 58 59
SimpleStmt (67)
    左： 39 40 41 42 43 44 45 46 47, 右： 33
LValue (68)
    左： 48 49 50, 右： 40 41 42 43 44 65
Call (69)
    左： 51 52, 右： 47 66
Actuals (70)
    左： 53 54, 右： 51 52
Exprs (71)
    左： 55 56, 右： 54 56
WhileStmt (72)
    左： 57, 右： 35
IfStmt (73)
    左： 58 59, 右： 34
ReturnStmt (74)
    左： 60 61, 右： 37
BreakStmt (75)
    左： 62, 右： 36
BoolExpr (76)
    左： 63, 右： 57 58 59
Expr (77)
    左： 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82
    83 84, 右： 40 41 42 43 44 49 50 52 55 56 61 63 67 68 69 70 71
    72 73 74 75 76 77 78 79 80 81 83 84
Constant (78)
    左： 85 86 87 88 89, 右： 64


State 0

    0 $accept: . Program $end

    error     shift, and go to state 1
    KEYCLASS  shift, and go to state 2

    Program    转到状态 3
    ClassDefs  转到状态 4
    ClassDef   转到状态 5


State 1

   23 ClassDef: error . LMRIGHTBRACE

    LMRIGHTBRACE  shift, and go to state 6


State 2

   21 ClassDef: KEYCLASS . IDENTIFIER LMLEFTBRACE Fields LMRIGHTBRACE
   22         | KEYCLASS . IDENTIFIER KEYEXTENDS IDENTIFIER LMLEFTBRACE Fields LMRIGHTBRACE

    IDENTIFIER  shift, and go to state 7


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 8


State 4

    1 Program: ClassDefs .
    3 ClassDefs: ClassDefs . ClassDef

    error     shift, and go to state 1
    KEYCLASS  shift, and go to state 2

    $end  reduce using rule 1 (Program)

    ClassDef  转到状态 9


State 5

    2 ClassDefs: ClassDef .

    $default  reduce using rule 2 (ClassDefs)


State 6

   23 ClassDef: error LMRIGHTBRACE .

    $default  reduce using rule 23 (ClassDef)


State 7

   21 ClassDef: KEYCLASS IDENTIFIER . LMLEFTBRACE Fields LMRIGHTBRACE
   22         | KEYCLASS IDENTIFIER . KEYEXTENDS IDENTIFIER LMLEFTBRACE Fields LMRIGHTBRACE

    LMLEFTBRACE  shift, and go to state 10
    KEYEXTENDS   shift, and go to state 11


State 8

    0 $accept: Program $end .

    $default  接受


State 9

    3 ClassDefs: ClassDefs ClassDef .

    $default  reduce using rule 3 (ClassDefs)


State 10

   21 ClassDef: KEYCLASS IDENTIFIER LMLEFTBRACE . Fields LMRIGHTBRACE

    error      shift, and go to state 12
    TYPECHAR   shift, and go to state 13
    TYPEINT    shift, and go to state 14
    TYPEFLOAT  shift, and go to state 15
    TYPEBOOL   shift, and go to state 16
    KEYCLASS   shift, and go to state 17

    LMRIGHTBRACE  reduce using rule 24 (Fields)

    VariableDef  转到状态 18
    Variable     转到状态 19
    Type         转到状态 20
    FunctionDef  转到状态 21
    Fields       转到状态 22
    Field        转到状态 23


State 11

   22 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS . IDENTIFIER LMLEFTBRACE Fields LMRIGHTBRACE

    IDENTIFIER  shift, and go to state 24


State 12

    6 VariableDef: error . LMSEMICOLON

    LMSEMICOLON  shift, and go to state 25


State 13

   13 Type: TYPECHAR .

    $default  reduce using rule 13 (Type)


State 14

   10 Type: TYPEINT .

    $default  reduce using rule 10 (Type)


State 15

   11 Type: TYPEFLOAT .

    $default  reduce using rule 11 (Type)


State 16

   12 Type: TYPEBOOL .

    $default  reduce using rule 12 (Type)


State 17

   14 Type: KEYCLASS . IDENTIFIER

    IDENTIFIER  shift, and go to state 26


State 18

   26 Field: VariableDef .

    $default  reduce using rule 26 (Field)


State 19

    4 VariableDef: Variable . LMSEMICOLON
    5            | Variable . CommaIdentifiers LMSEMICOLON

    LMSEMICOLON  shift, and go to state 27
    LMCOMMA      shift, and go to state 28

    CommaIdentifiers  转到状态 29


State 20

    9 Variable: Type . IDENTIFIER
   15 Type: Type . OPLEFTBRACKET OPRIGHTBRACKET
   20 FunctionDef: Type . IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTBRACKET  shift, and go to state 30
    IDENTIFIER     shift, and go to state 31


State 21

   27 Field: FunctionDef .

    $default  reduce using rule 27 (Field)


State 22

   21 ClassDef: KEYCLASS IDENTIFIER LMLEFTBRACE Fields . LMRIGHTBRACE

    LMRIGHTBRACE  shift, and go to state 32


State 23

   25 Fields: Field . Fields

    error      shift, and go to state 12
    TYPECHAR   shift, and go to state 13
    TYPEINT    shift, and go to state 14
    TYPEFLOAT  shift, and go to state 15
    TYPEBOOL   shift, and go to state 16
    KEYCLASS   shift, and go to state 17

    LMRIGHTBRACE  reduce using rule 24 (Fields)

    VariableDef  转到状态 18
    Variable     转到状态 19
    Type         转到状态 20
    FunctionDef  转到状态 21
    Fields       转到状态 33
    Field        转到状态 23


State 24

   22 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER . LMLEFTBRACE Fields LMRIGHTBRACE

    LMLEFTBRACE  shift, and go to state 34


State 25

    6 VariableDef: error LMSEMICOLON .

    $default  reduce using rule 6 (VariableDef)


State 26

   14 Type: KEYCLASS IDENTIFIER .

    $default  reduce using rule 14 (Type)


State 27

    4 VariableDef: Variable LMSEMICOLON .

    $default  reduce using rule 4 (VariableDef)


State 28

    7 CommaIdentifiers: LMCOMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 35


State 29

    5 VariableDef: Variable CommaIdentifiers . LMSEMICOLON
    8 CommaIdentifiers: CommaIdentifiers . LMCOMMA IDENTIFIER

    LMSEMICOLON  shift, and go to state 36
    LMCOMMA      shift, and go to state 37


State 30

   15 Type: Type OPLEFTBRACKET . OPRIGHTBRACKET

    OPRIGHTBRACKET  shift, and go to state 38


State 31

    9 Variable: Type IDENTIFIER .
   20 FunctionDef: Type IDENTIFIER . OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock

    OPLEFTPRNT  shift, and go to state 39

    $default  reduce using rule 9 (Variable)


State 32

   21 ClassDef: KEYCLASS IDENTIFIER LMLEFTBRACE Fields LMRIGHTBRACE .

    $default  reduce using rule 21 (ClassDef)


State 33

   25 Fields: Field Fields .

    $default  reduce using rule 25 (Fields)


State 34

   22 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER LMLEFTBRACE . Fields LMRIGHTBRACE

    error      shift, and go to state 12
    TYPECHAR   shift, and go to state 13
    TYPEINT    shift, and go to state 14
    TYPEFLOAT  shift, and go to state 15
    TYPEBOOL   shift, and go to state 16
    KEYCLASS   shift, and go to state 17

    LMRIGHTBRACE  reduce using rule 24 (Fields)

    VariableDef  转到状态 18
    Variable     转到状态 19
    Type         转到状态 20
    FunctionDef  转到状态 21
    Fields       转到状态 40
    Field        转到状态 23


State 35

    7 CommaIdentifiers: LMCOMMA IDENTIFIER .

    $default  reduce using rule 7 (CommaIdentifiers)


State 36

    5 VariableDef: Variable CommaIdentifiers LMSEMICOLON .

    $default  reduce using rule 5 (VariableDef)


State 37

    8 CommaIdentifiers: CommaIdentifiers LMCOMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 41


State 38

   15 Type: Type OPLEFTBRACKET OPRIGHTBRACKET .

    $default  reduce using rule 15 (Type)


State 39

   20 FunctionDef: Type IDENTIFIER OPLEFTPRNT . Formals OPRIGHTPRNT StmtBlock

    TYPECHAR   shift, and go to state 13
    TYPEINT    shift, and go to state 14
    TYPEFLOAT  shift, and go to state 15
    TYPEBOOL   shift, and go to state 16
    KEYCLASS   shift, and go to state 17

    $default  reduce using rule 18 (Formals)

    Variable   转到状态 42
    Type       转到状态 43
    Variables  转到状态 44
    Formals    转到状态 45


State 40

   22 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER LMLEFTBRACE Fields . LMRIGHTBRACE

    LMRIGHTBRACE  shift, and go to state 46


State 41

    8 CommaIdentifiers: CommaIdentifiers LMCOMMA IDENTIFIER .

    $default  reduce using rule 8 (CommaIdentifiers)


State 42

   16 Variables: Variable .

    $default  reduce using rule 16 (Variables)


State 43

    9 Variable: Type . IDENTIFIER
   15 Type: Type . OPLEFTBRACKET OPRIGHTBRACKET

    OPLEFTBRACKET  shift, and go to state 30
    IDENTIFIER     shift, and go to state 47


State 44

   17 Variables: Variables . LMCOMMA Variable
   19 Formals: Variables .

    LMCOMMA  shift, and go to state 48

    $default  reduce using rule 19 (Formals)


State 45

   20 FunctionDef: Type IDENTIFIER OPLEFTPRNT Formals . OPRIGHTPRNT StmtBlock

    OPRIGHTPRNT  shift, and go to state 49


State 46

   22 ClassDef: KEYCLASS IDENTIFIER KEYEXTENDS IDENTIFIER LMLEFTBRACE Fields LMRIGHTBRACE .

    $default  reduce using rule 22 (ClassDef)


State 47

    9 Variable: Type IDENTIFIER .

    $default  reduce using rule 9 (Variable)


State 48

   17 Variables: Variables LMCOMMA . Variable

    TYPECHAR   shift, and go to state 13
    TYPEINT    shift, and go to state 14
    TYPEFLOAT  shift, and go to state 15
    TYPEBOOL   shift, and go to state 16
    KEYCLASS   shift, and go to state 17

    Variable  转到状态 50
    Type      转到状态 43


State 49

   20 FunctionDef: Type IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT . StmtBlock

    error        shift, and go to state 51
    LMLEFTBRACE  shift, and go to state 52

    StmtBlock  转到状态 53


State 50

   17 Variables: Variables LMCOMMA Variable .

    $default  reduce using rule 17 (Variables)


State 51

   29 StmtBlock: error . LMRIGHTBRACE

    LMRIGHTBRACE  shift, and go to state 54


State 52

   28 StmtBlock: LMLEFTBRACE . Stmts LMRIGHTBRACE

    error            shift, and go to state 55
    LMLEFTBRACE      shift, and go to state 52
    OPLEFTPRNT       shift, and go to state 56
    OPMINUS          shift, and go to state 57
    OPINCREASE       shift, and go to state 58
    OPDECREASE       shift, and go to state 59
    OPNOT            shift, and go to state 60
    TYPECHAR         shift, and go to state 13
    TYPEINT          shift, and go to state 14
    TYPEFLOAT        shift, and go to state 15
    TYPEBOOL         shift, and go to state 16
    KEYCLASS         shift, and go to state 17
    KEYNEW           shift, and go to state 61
    KEYIF            shift, and go to state 62
    KEYWHILE         shift, and go to state 63
    KEYBREAK         shift, and go to state 64
    KEYRETURN        shift, and go to state 65
    CONSTANTINTD     shift, and go to state 66
    CONSTANTINTH     shift, and go to state 67
    CONSTANTFLOAT    shift, and go to state 68
    CONSTANTFLOATSC  shift, and go to state 69
    CONSTANTBOOL     shift, and go to state 70
    IDENTIFIER       shift, and go to state 71

    LMSEMICOLON   reduce using rule 39 (SimpleStmt)
    LMRIGHTBRACE  reduce using rule 30 (Stmts)

    VariableDef  转到状态 72
    Variable     转到状态 19
    Type         转到状态 43
    StmtBlock    转到状态 73
    Stmts        转到状态 74
    Stmt         转到状态 75
    SimpleStmt   转到状态 76
    LValue       转到状态 77
    Call         转到状态 78
    WhileStmt    转到状态 79
    IfStmt       转到状态 80
    ReturnStmt   转到状态 81
    BreakStmt    转到状态 82
    Expr         转到状态 83
    Constant     转到状态 84


State 53

   20 FunctionDef: Type IDENTIFIER OPLEFTPRNT Formals OPRIGHTPRNT StmtBlock .

    $default  reduce using rule 20 (FunctionDef)


State 54

   29 StmtBlock: error LMRIGHTBRACE .

    $default  reduce using rule 29 (StmtBlock)


State 55

    6 VariableDef: error . LMSEMICOLON
   29 StmtBlock: error . LMRIGHTBRACE

    LMSEMICOLON   shift, and go to state 25
    LMRIGHTBRACE  shift, and go to state 54


State 56

   67 Expr: OPLEFTPRNT . Expr OPRIGHTPRNT
   84     | OPLEFTPRNT . KEYCLASS IDENTIFIER OPRIGHTPRNT Expr
